apache/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: apache-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: apache
    template:
        metadata:
            labels:
                app: apache
            name: apache-pod
        spec:
            containers:
                - name: apache-container
                  image: ahm282/milestone2:apache
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: html-volume
                        mountPath: /var/www/html
            volumes:
                - name: html-volume
                  hostPath:
                      path: /vagrant/deployments/apache/www
                      type: Directory
