apache/apache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: apache-ingress
    annotations:
        nginx.ingress.kubernetes.io/ingress-class: "nginx"
spec:
    rules:
        - host: apache.pretzel218.messwithdns.com
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: apache-service
                            port:
                                number: 80
